<?xml version='1.0' encoding='UTF-8'?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="en">
    <!--BookShelf-->
    <string name="mal_file_message">The following file may be corrupt:</string>
    <string name="mal_file_title">Defect file</string>
    <string name="content_current_book">This is the current book</string>
    <string name="current_book">Current book</string>
    <string name="change_layout_type">Change layout</string>
    <!--BookPlayFragment-->
    <string name="cover">Cover</string>
    <string name="play_pause">Play / Pause</string>
    <string name="action_sleep">Sleep-Timer</string>
    <plurals name="pauses_after">
        <item quantity="one">Pauses after %d minute.</item>
        <item quantity="other">Pauses after %d minutes.</item>
    </plurals>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast forward</string>
    <string name="previous_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <!--NoExternalStorage-->
    <string name="no_external_storage">External Storage is not available. Please make sure it is connected and not mounted in your computer.</string>
    <string name="no_external_storage_action_bar_title">External Storage</string>
    <!--Dialogs-->
    <string name="dialog_confirm">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_no">No</string>
    <!--EditBookDialog-->
    <string name="content_previous_cover">Chooses previous cover</string>
    <string name="content_next_cover">Chooses next cover</string>
    <string name="content_cover">Shows cover to choose</string>
    <string name="change_book_name">Name</string>
    <string name="change_book_cover">Cover</string>
    <string name="edit_book_title">Edit book</string>
    <!--JumpToPosition-->
    <string name="action_time_change">Jump to</string>
    <!--BookAdding-->
    <string name="adding_failed_subfolder">The folders must not be a subfolder of each other:</string>
    <string name="audiobook_folders_title">Audiobook folders</string>
    <string name="no_audiobook_folders_title">Choose folder now</string>
    <string name="no_audiobook_folders_summary_start">Please choose your audiobook folder(s) now.</string>
    <string name="no_audiobook_folders_end">You can choose your main folder containing different books. Or you can choose just a single book.</string>
    <string name="chosen_folder_description">Chosen folder:</string>
    <string name="delete_folder">Remove from Library?</string>
    <string name="delete_folder_content">Do you want to remove the following folder from the library?</string>
    <string name="folder_add_single_book">Single book</string>
    <string name="folder_begin_scan">Scan Storage</string>
    <string name="folder_add_collection">Folder with multiple books</string>
    <string name="for_example">e.g.</string>
    <string name="content_add_book">Add a book</string>
    <string name="content_is_folder">Folder</string>
    <string name="content_is_file">File</string>
    <string name="content_navigate_up">Go to parent folder</string>
    <string name="permission_read_ext_explanation">The app needs to read your storage so it can find and play the audio books.</string>
    <string name="permission_external_new_explanation">Can\'t read books without permission</string>
    <string name="permission_retry">Retry?</string>
    <string name="permission_goto_settings">Settings</string>
    <string name="permission_read_ext_request">Should we ask for the permission again?</string>
    <string name="permission_rescan">Request again</string>
    <string name="storage_pre_device">Storage:</string>
    <string name="storage_all">All</string>
    <!--PlaybackSpeed-->
    <string name="playback_speed">Playback speed</string>
    <!--Bookmarks-->
    <string name="bookmark">Bookmark</string>
    <string name="shake_to_reset">Shake to reset</string>
    <string name="bookmark_edit_title">Edit bookmark</string>
    <string name="acc_button_add_bookmark">Adds a bookmark at the current position</string>
    <string name="bookmark_edit_hint">Bookmark name</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_delete_title">Delete this bookmark?</string>
    <!--Settings-->
    <string name="action_settings">Preferences</string>
    <string name="pref_resume_on_replug">Resume playback</string>
    <string name="pref_resume_on_replug_hint">If you paused by plugging headset out, it will resume on replug.</string>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="pref_seek_time">Skip amount</string>
    <string name="pref_sleep_time">Sleep time</string>
    <string name="pref_root_folder_title">Audiobook folder</string>
    <string name="pref_root_folder_summary">The selected audiobook folders.</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_day">Day</string>
    <string name="pref_theme_night">Night</string>
    <string name="pref_theme_daynight">Day / Night</string>
    <string name="pref_pause_on_can_duck_title">Pause on Interruption</string>
    <string name="pref_pause_on_can_duck_summary">Pause when interrupted instead of lowering the volume for the duration of the interruption.</string>
    <string name="pref_auto_rewind_title">Auto rewind</string>
    <plurals name="pref_auto_rewind_summary">
        <item quantity="one">Automatically rewinds %d second after manual pausing.</item>
        <item quantity="other">Automatically rewinds %d seconds after manual pausing.</item>
    </plurals>
    <string name="pref_support_title">Support</string>
    <string name="pref_support_translations">Translations</string>
    <string name="pref_support_contribute">Support and suggestions</string>
    <string name="pref_google_account">Connect Google Account</string>
    <!--Misc-->
    <string name="popup_edit">Edit</string>
    <string name="remove">Remove</string>
    <!-- hide folder dialog -->
    <string name="hide_folder_title">Hide folder</string>
    <string name="hide_folder_content">Do you want to hide the folder from music players, so they don\'t recognize your book as music?</string>
    <string name="hide_confirm">Hide</string>
    <!-- license activity -->
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    <string name="no_network">No network?</string>
    <string name="network_top">This didn\'t work too well…</string>
    <string name="cover_crop">Crop cover</string>


    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

</resources>