<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Material Audiobook Player.
  ~
  ~ Material Audiobook Player is free software: you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software Foundation, either
  ~ version 3 of the License, or any later version.
  ~
  ~ Material Audiobook Player is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  ~ PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with Foobar.  If not,
  ~  see <http://www.gnu.org/licenses/>.
  -->

<!--
  ~ This file is part of Material Audiobook Player.
  ~
  ~ Material Audiobook Player is free software: you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software Foundation, either
  ~ version 3 of the License, or any later version.
  ~
  ~ Material Audiobook Player is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  ~ PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with Foobar.  If not,
  ~  see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MediaPlay">

    <item
        android:id="@+id/action_sleep"
        android:icon="@drawable/ic_snooze_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_sleep"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_outline_white_24dp"
        android:orderInCategory="2"
        android:title="@string/bookmark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_time_lapse"
        android:icon="@drawable/ic_clock_fast_white_24dp"
        android:orderInCategory="3"
        android:title="@string/playback_speed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_time_change"
        android:orderInCategory="4"
        android:title="@string/action_time_change"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="5"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>