<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:showDividers="middle"
    android:divider="@drawable/notification_divider"
    android:dividerPadding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
        android:id="@+id/rewind"
        android:src="@drawable/ic_fast_rewind_white_36dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:layout_height="match_parent"
        android:contentDescription="@string/rewind" />

    <ImageButton
        android:id="@+id/playPause"
        android:src="@drawable/ic_play_arrow_white_48dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play_pause" />

    <ImageButton
        android:id="@+id/fast_forward"
        android:src="@drawable/ic_fast_forward_white_36dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:layout_height="match_parent"
        android:contentDescription="@string/fast_forward" />

</LinearLayout>