<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/book_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroTime" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/maxTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroTime" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/previous_track"
                android:padding="8dp"
                android:src="?attr/book_play_previous" />

            <ImageButton
                android:id="@+id/rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="44dp"
                android:contentDescription="@string/rewind"
                android:padding="8dp"
                android:src="?attr/book_play_rewind" />

            <ImageButton
                android:id="@+id/fastForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:contentDescription="@string/fast_forward"
                android:padding="8dp"
                android:src="?attr/book_play_fast_forward" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next_track"
                android:padding="8dp"
                android:src="?attr/book_play_next" />

        </LinearLayout>

    </LinearLayout>


    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="8dp"
        android:contentDescription="@string/play_pause"
        android:gravity="bottom"
        android:transitionName="@string/transition_fab"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="de.ph1b.audiobook.uitools.FabBehavior"
        fab:fab_colorNormal="?attr/colorAccent"
        fab:fab_colorPressed="?attr/colorAccentDark"
        tools:ignore="UnusedAttribute" />

</android.support.design.widget.CoordinatorLayout>
