<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cover"
        android:scaleType="centerCrop" />


    <Spinner
        android:id="@+id/book_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroTime" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp" />

            <TextView
                android:id="@+id/maxTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroTime" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/rewind"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rewind"
                android:src="@drawable/ic_fast_rewind_black_36dp" />

            <ImageButton
                android:id="@+id/play"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play_pause"
                android:src="@drawable/ic_play_arrow_black_36dp" />

            <ImageButton
                android:id="@+id/fast_forward"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fast_forward"
                android:src="@drawable/ic_fast_forward" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>